--- a/hw.html
+++ b/hw.html
@@ -1,1 +1,8 @@
-new line second line third
+<html>
+  <body>
+    <p>line</p>
+    <p>second line</p>
+    <p>third line</p>
+    <p>push from VSC</p>
+  </body>
+</html>
